# dionysus

./: .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
backend/: README.md  go.mod  go.sum  sqlc.yaml
frontend/: index.html  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app-smoke.e2e.ts  deployed-app.e2e.ts
frontend/src/: app.tsx  index.css  main.tsx
frontend/tests/: admin-page.test.ts  app-shell.test.ts  findings-page.test.ts  (+6 more)
python/: pyproject.toml
scripts/: check_version_bump.py  parity_contract.py  sync_version.py
tests/: conftest.py  test_actors.py  test_admin_bootstrap.py  test_admin_permission_test_api.py  test_api_admin_access.py  test_api_admin_imports.py  test_api_admin_sessions.py  test_api_auth.py  test_api_machine_credentials.py  test_api_oauth.py  test_app.py  test_audit.py  test_authorization.py  test_config.py  test_dockerfile.py  test_finding_models.py  test_finding_queries.py  test_finding_workflow.py  test_findings_api.py  test_frontend_serving.py  test_import_persistence.py  test_imports_api.py  test_inventory_api.py  test_inventory_models.py  test_inventory_services.py  test_machines.py  test_overview_api.py  test_package.py  test_passwords.py  test_permissions.py  test_release_inheritance.py  test_release_workflow.py  test_request_body_limit.py  test_security_settings_api.py  test_sessions.py  test_sla.py  test_users.py  test_version_bump_check.py  test_version_sync.py
(+240 files in other folders)
