[project]
name = "dionysus"
version = "0.7.1"
description = "Security scan triage web application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.3",
    "argon2-cffi>=23.1.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.5.2",
    "psycopg[binary]>=3.2.1",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "ty>=0.0.1a6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dionysus"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "RUF",
    "S",
    "SIM",
    "UP",
    "W",
]
ignore = [
    "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
